--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </header>
     <div class="flex w-full h-full">
-        <nav id="sideNav" class="bg-gray-50 text-gray-700 border-r border-gray-200 duration-300 h-full flex-col justify-between relative ease-in-out">
+        <nav id="sideNav" class="bg-gray-50 text-gray-700 border-r border-gray-200 duration-300 h-full flex-col justify-between relative">
             <div id="hover-area" class="absolute top-0 -right-8 h-full w-8"></div>
             <div id="naviation-top" class="pt-6 gap-2 h-full overflow-scroll w-full flex flex-col">
                 <div class="gap-1 w-full flex flex-col pr-2 pl-4" id="in-sidenav-btn" style="display: block;">
