--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <div class="flex items-center gap-4">
                 <div class="w-120 flex flex-col gap-2">
                     <div class="h-11 bg-white rounded-full flex items-center">
-                        <div class="w-full px-4 py-3 bg-gray-50 flex items-center gap-2 rounded-full">
+                        <!-- <div class="w-full px-4 py-3 bg-gray-50 flex items-center gap-2 rounded-full">
                             <div class="w-5 h-5 relative"><img src="/assets/img/search-lg.png" alt="search icon"></div>
                             <div class="flex-grow text-gray-500 text-sm font-normal leading-tight">
                                 Search by keyword(s), VPN or IM SKU
                             </div>
                             <div class="w-5 h-5 relative"><img src="/assets/img/sliders-01.png" alt="filter icon"></div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="flex items-center gap-4">
